
// TODO finish coroutine migration -  telecine
// TODO find new material design icons as used in google cal / clock
// TODO base velocity legend
// TODO SPC MESO rescan for _sf, convert to list
// TODO camelCase all vars in model's interfaces
// TODO NWS URLs http to https const myapp
// TODO SPC HREF use long names for sectors

55062 2018_11_23 add okhttpUnsafe and use in sun/moon
55061 2018_11_23 bugfix in SPCHREF and NCEP MAG
55060 2018_11_23 bugfix in SPCHRRR
55059 2018_11_22 more model refactor and bugfix
                 add NWS URL const to Myapp and switch to https when possible in response to SCN18-100
55058 2018_11_22 more model refactor and bugfix
55057 2018_11_21 bugfix in spc href/hrrr related to forward arrow
                 cleanup
55056 2018_11_21 continue to migrate SPCSREF, SPCHRRR - add multipane support for both ( remove SPC HRRR multiple params in same image for consistency )
                 cleanup manifest after recent changes
55055 2018_11_21 migrate SPCSREF to ObjectModel (partially)
55054 2018_11_20 bugfix for NSSL - models not showing
                 bugfix for ESRL - sectors not working
                 convert GLCFS, NCEP to new generic framework
55053 2018_11_20 move NSSL to generic model
55052 2018_11_20 move ESRL to generic model
55051 2018_11_19 coroutine conversion: SPCStormReportsActivity
                 refactor model code such as WPCGEFS
                 implement generic model activity and move WPCGEFS to it
55050 2018_11_18 rationalize ESRL and NCEP to be more like WRF in terms of setupModel and var naming
                 (bugfix) NCEP RAP has more time increments to offer now
55049 2018_11_17 coroutine conversion: BackgroundFetch, WXGLRadarActivity, WXGLRadarActivityMultiPane
55048 2018_11_17 coroutine conversion: SPCTstormOutlookActivity, SPCSWOStateGraphicsActivity, SPCSoundingsActivity